# -CSR-Scanner

./: README.md
CSR-Scanner/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
CSR-Scanner/docs/: API.md  CONFIGURATION.md  TROUBLESHOOTING.md
CSR-Scanner/examples/: batch_processing.py  sample_config.json  sample_input.csv
CSR-Scanner/src/: __init__.py  config.py  error_handler.py  models.py  performance_optimizer.py  retry_manager.py  run_analysis.py  website_renderer.py
CSR-Scanner/tests/: __init__.py  test_basic.py
